# AMI-NL

./: .gitignore  README.md  music.json  next.config.js  project_database.md  project_designdoc.md  project_frontend.md  project_functionality.md  project_technologies.md  prompts_backend.md  prompts_doc.md  prompts_frontend.md  prompts_general.md  ref.html
backend/: Dockerfile  __init__.py  docker-compose.yml  main.py  pyproject.toml  update_relationships.py
backend/api/: auth.py  main.py
backend/api/routes/: __init__.py  characters.py  chat_rooms.py  image_generation.py  image_upload.py  monsters.py  users.py
backend/core/: config.py  security.py
backend/models/: __init__.py  base_character.py  character.py  character_class.py  character_details.py  class_feature.py  enums.py  feature.py  inventory_item.py  item.py  monster.py  skill.py  spell.py  spellcasting.py  subclass.py  user.py
backend/schemas/: auth.py  base_character.py  character.py  item.py  monster.py  skill.py  spellcasting.py  user.py
backend/services/: character_service.py  monster_service.py  user_service.py
database/: docker-compose.yml
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/components/: CharacterCreation.js  ChatRoom.js  Footer.js  Header.js  LandingPage.js
frontend/src/: App.jsx
frontend/src/components/: Layout.js  Layout.jsx  LoginModal.js  RegisterModal.js
frontend/src/context/: AuthContext.js
frontend/src/contexts/: AuthContext.js  CharacterContext.js
frontend/src/pages/: Characters.tsx  _app.js  (+13 more)
src/: index.ts
src/routes/: characters.ts
(+18 files in other folders)
